remove css causing issues on iphone X

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -137,7 +137,6 @@ $sun-diameter: 120px;
     justify-content: stretch;
     width: 100%;
     overflow: hidden;
-    min-height: calc(100vh - 64px);
     .content-area {
         height: 100%;
         display: flex;
